--- a/React/webapp/src/web.css
+++ b/React/webapp/src/web.css
@@ -7,7 +7,7 @@ header
 {
     background-color: lightblue;
     display:flex;
-    justify-content: space-around;
+    justify-content: space-between;
     font-weight: bold;
     font-size: 34px;
 }
@@ -18,12 +18,17 @@ nav
 nav ul
 {
     display: flex;
+    justify-content: center;
     list-style: none;
-
 }
 nav ul li
 {
     margin-right: 20px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
 }
 section
 {
