--- a/React/psd-react/src/App.css
+++ b/React/psd-react/src/App.css
@@ -60,8 +60,7 @@
   border-radius: 100px;
   width: 200px;
   height: 200px;
-  background:white;
-  opacity: 0.4;
+  filter:grayscale(100%);
 }
 
 .section-2-1{
@@ -172,6 +171,53 @@ input{
   color: #f1f1f1;
   font-weight: 700;
   font-family: "Oswald";
+}
+.footer{
+  padding: 10px 10px;
+  background-color: #8c6eca;
+  display: flex;
+  justify-content: space-around;
+}
+
+.about h1{
+  margin: 0px;
+  padding-top: 100px;
+  color: #e6e6e6;
+}
+
+.about p{
+  margin: 0px;
+  padding: 5px;
+  color: #e6e6e6;
+}
+
+.whatwedo h1{
+  margin: 0px;
+  padding-top: 100px;
+  color: #e6e6e6;
+}
+
+.whatwedo p{
+  margin: 0px;
+  padding: 5px;
+  color: #e6e6e6;
+}
+
+.signup h1{
+  margin: 0px;
+  padding-top: 100px;
+  color: #e6e6e6;
+}
+
+.signup input{
+  margin-top: 40px;
+  padding: 10px 100px 10px 10px;
+  background-color: #8a6dc7;
+  border: 4px solid #e6e6e6;
+}
+
+.signup p{
+  color: #e6e6e6;
 }
 
 @keyframes App-logo-spin {
