--- a/React/vimal-shirt/src/Signup.css
+++ b/React/vimal-shirt/src/Signup.css
@@ -1,7 +1,7 @@
 .signup_box{
-    width: 500px;
+    width: 480px;
     height: 670px;
-    margin:40px 0px 20px 300px;
+    /* margin:40px 0px 20px 300px; */
     text-align: center;
     background-color: white;
 }
